// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pregenerated-lib returns description of the service 1`] = `"SAP Cloud SDK for JavaScript: Virtual Data Model (VDM) for service test-service"`;

exports[`sdk-metadata generates the sdk metadata content for services with pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { TestEntity } from '@sap/cloud-sdk-vdm-test-service';

const resultPromise = TestEntity.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "In the example below you query the top 5 entities of the  <code>TestEntity </code> type.",
    },
    "generationSteps": Object {
      "instructions": "<ul>
<li>Download the API specification to your local computer.</li>
<li>Install the generator <code>npm install -g @sap-cloud-sdk/generator</code></li>
<li>Execute the generator <code>generate-odata-client --inputDir path/to/service-spec --outputDir path/to/</code></li>
</ul>
The steps above will generate a basic TypeScript client. For additional options like transpiling to JavaScript etc. visit our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">documentation.</a>",
      "text": "Follow the following generation steps to generate the client.",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "In the example below you query the top 5 entities of the  <code>BusinessPartner </code> type.",
    },
    "links": Object {
      "apiHubTutorial": Object {
        "name": "API Hub Tutorial",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/execute-odata-request",
      },
      "featureDocumentation": Object {
        "name": "Feature Documentation",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/use-odata-v2-type-safe-client-for-javascript-typescript",
      },
      "generationManual": Object {
        "name": "Generation Manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client",
      },
      "sdkDocumentation": Object {
        "name": "SDK Documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Support",
        "url": "https://github.com/SAP/cloud-sdk-js/issues/new/choose",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": Object {
    "compatibilityNotes": "",
    "dependencyName": "@sap/cloud-sdk-vdm-test-service",
    "description": "SAP Cloud SDK for JavaScript: Virtual Data Model (VDM) for service test-service",
    "generatedAt": "/Date(0)/",
    "installLibrarySteps": Object {
      "instructions": "npm i @sap/cloud-sdk-vdm-test-service:latest",
      "text": "Execute the following npm command to install the pregenerated client.",
    },
    "repository": "npm",
    "repositoryLink": "https://www.npmjs.com/package/@sap/cloud-sdk-vdm-test-service",
    "version": "1.2.3",
  },
  "serviceStatus": Object {
    "status": "certified",
    "statusLongText": "You can download our pregenerated API client for this API.",
    "statusText": "API Client available for download",
  },
}
`;

exports[`sdk-metadata generates the sdk metadata content for services without pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { TestEntity } from '@sap/cloud-sdk-vdm-test-service';

const resultPromise = TestEntity.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "In the example below you query the top 5 entities of the  <code>TestEntity </code> type.",
    },
    "generationSteps": Object {
      "instructions": "<ul>
<li>Download the API specification to your local computer.</li>
<li>Install the generator <code>npm install -g @sap-cloud-sdk/generator</code></li>
<li>Execute the generator <code>generate-odata-client --inputDir path/to/service-spec --outputDir path/to/</code></li>
</ul>
The steps above will generate a basic TypeScript client. For additional options like transpiling to JavaScript etc. visit our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">documentation.</a>",
      "text": "Follow the following generation steps to generate the client.",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "In the example below you query the top 5 entities of the  <code>BusinessPartner </code> type.",
    },
    "links": Object {
      "apiHubTutorial": Object {
        "name": "API Hub Tutorial",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/execute-odata-request",
      },
      "featureDocumentation": Object {
        "name": "Feature Documentation",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/use-odata-v2-type-safe-client-for-javascript-typescript",
      },
      "generationManual": Object {
        "name": "Generation Manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client",
      },
      "sdkDocumentation": Object {
        "name": "SDK Documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Support",
        "url": "https://github.com/SAP/cloud-sdk-js/issues/new/choose",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": undefined,
  "serviceStatus": Object {
    "status": "verified",
    "statusLongText": "The SAP Cloud SDK team checked for this API that generating a API client works, but no pregenerated client is available. You can generate your own client for this API.",
    "statusText": "API Client generation tested but no download available",
  },
}
`;
